mcfootball-generator/src/test/resources/football/invalid/DuplicateLeague.fb
/* Invalid model: triggers 0xFC005 NoDuplicateLeaguePerCountry
 * — Two league blocks named "Bundesliga" in country Germany.
 */
footballsite DuplicateLeagueTest {

  navigation { Germany; }

  country Germany {
    league Bundesliga season "2025-2026" {
      match {
        date    "2025-09-01"
        time    "15:30"
        home    "Bayern München"    ("Munich")
        away    "Borussia Dortmund" ("Dortmund")
        score   2 - 1
        stadium "Allianz Arena"
      }
    }
    league Bundesliga season "2025-2026" {
      match {
        date    "2025-09-08"
        time    "18:30"
        home    "RB Leipzig"        ("Leipzig")
        away    "Bayer Leverkusen"  ("Leverkusen")
        score   1 - 1
        stadium "Red Bull Arena"
      }
    }
  }

}
